--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       - 9042
 
   temporal:
-    image: temporaliotest/auto-setup:latest
+    image: temporalio/auto-setup:latest
     ports:
       - "7233:7233"
       - "7234:7234"
