--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Set up Java
       uses: actions/setup-java@v3
       with:
-        java-version: "11"
+        java-version: "17"
         distribution: "temurin"
 
     - name: Set up Gradle
@@ -31,7 +31,7 @@ jobs:
       run: |
         docker compose \
           -f ./docker/buildkite/docker-compose.yaml \
-          up -d unit-test-docker-jdk8
+          up -d unit-test-test-service-edge
     
     - name: Run unit tests
       run: ./gradlew --no-daemon test -x checkLicenseMain -x checkLicenses -x spotlessCheck -x spotlessApply -x spotlessJava -P edgeDepsTest
