--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,18 +21,11 @@ jobs:
     - name: Set up Java
       uses: actions/setup-java@v3
       with:
-        java-version: "17"
+        java-version: "19"
         distribution: "temurin"
 
     - name: Set up Gradle
       uses: gradle/actions/setup-gradle@v3
-
-    
-    - name: Start containerized server and dependencies
-      run: |
-        docker compose \
-          -f ./docker/buildkite/docker-compose.yaml \
-          up -d unit-test-test-service-edge
     
     - name: Run unit tests
       run: ./gradlew --no-daemon test -x checkLicenseMain -x checkLicenses -x spotlessCheck -x spotlessApply -x spotlessJava -P edgeDepsTest
@@ -62,8 +55,8 @@ jobs:
     - name: Start containerized server and dependencies
       run: |
         docker compose \
-          -f ./docker/buildkite/docker-compose.yaml \
-          up -d unit-test-docker-jdk8
+          -f ./docker/docker/docker-compose.yaml \
+          up -d temporal
     
     - name: Run unit tests
       run: ./gradlew --no-daemon test -x checkLicenseMain -x checkLicenses -x spotlessCheck -x spotlessApply -x spotlessJava
@@ -77,7 +70,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-        submodules: recursiv
+        submodules: recursive
         ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Set up Java
