--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   unit_test_edge:
-    name: Unit test with in-memory test service (Edge)
+    name: Unit test with in-memory test service [Edge]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -31,7 +31,7 @@ jobs:
       run: ./gradlew --no-daemon test -x checkLicenseMain -x checkLicenses -x spotlessCheck -x spotlessApply -x spotlessJava -P edgeDepsTest
 
   unit_test_jdk8:
-    name: Unit test with docker service (JDK8)
+    name: Unit test with docker service [JDK8]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
