--- a/temporal-shaded/build.gradle
+++ b/temporal-shaded/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'io.github.goooler.shadow' version '8.1.7'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 description = '''Temporal Java SDK and Testing Framework with gRPC, Protobuf 3 and Guava shaded'''
