--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -1,4 +1,5 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import org.gradle.api.plugins.jvm.JvmTestSuite
 
 plugins {
     id 'org.jlleitschuh.gradle.ktlint' version '11.3.1'
@@ -43,3 +44,27 @@ task registerNamespace(type: JavaExec) {
 
 test.dependsOn 'registerNamespace'
 
+def jacksonVersions = ['2.9.0', "$jacksonVersion".toString()]
+
+testing {
+    suites {
+        jacksonVersions.forEach { jacksonVersion ->
+            "jackson${jacksonVersion}Test"(JvmTestSuite) {
+                useJUnit(junitVersion)
+                dependencies {
+                    implementation project()
+                    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion!!"
+                    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion!!"
+                    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion!!") {
+                        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
+                    }
+
+                    implementation project(':temporal-testing')
+                    implementation "junit:junit:${junitVersion}"
+                }
+            }
+        }
+    }
+}
+
+test.dependsOn("jackson2.9.0Test", "jackson2.14.2Test")
