--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -139,8 +139,8 @@ jobs:
     runs-on: ${{ matrix.runner }}
     env:
       # This is required to allow continuing usage of Node 16 for actions,
-      # as Node 20 won't run on the docker image we use for linux builds
-      # (Node 20 require glibc 2.28+, but container image has glibc 2.27).
+      # as Node 20 won't run on the builder we use for linux builds
+      # (Node 20 require glibc 2.28+, but ubuntu-1804 has glibc 2.27).
       # https://github.blog/changelog/2024-05-17-updated-dates-for-actions-runner-using-node20-instead-of-node16-by-default/
       ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
     steps:
