--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -145,7 +145,8 @@ jobs:
       ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        # FIXME: v4+ requires Node 20
+        uses: actions/checkout@v3
         with:
           ref: ${{ env.INPUT_REF }}
 
