--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -3,9 +3,8 @@ on: [push, pull_request]
 
 jobs:
   features-test:
-    uses: temporalio/features/.github/workflows/java.yaml@java-breaking-update
+    uses: temporalio/features/.github/workflows/java.yaml@main
     with:
       java-repo-path: ${{github.event.pull_request.head.repo.full_name}}
       version: ${{github.event.pull_request.head.ref}}
       version-is-repo-ref: true
-      features-repo-ref: java-breaking-update
