--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   features-test:
-    uses: temporalio/features/.github/workflows/java.yaml@main
+    uses: temporalio/features/.github/workflows/java.yaml@WorkflowUpdateHandle # TODO: switch back to `main`
     with:
       java-repo-path: ${{github.event.pull_request.head.repo.full_name}}
       version: ${{github.event.pull_request.head.ref}}
