--- a/docker/github/dynamicconfig/development.yaml
+++ b/docker/github/dynamicconfig/development.yaml
@@ -4,6 +4,8 @@ system.enableActivityEagerExecution:
   - value: true
 system.enableEagerWorkflowStart:
   - value: true
+frontend.enableExecuteMultiOperation:
+  - value: true
 frontend.enableUpdateWorkflowExecution:
   - value: true
 frontend.enableUpdateWorkflowExecutionAsyncAccepted:
