--- a/docker/github/dynamicconfig/development.yaml
+++ b/docker/github/dynamicconfig/development.yaml
@@ -21,7 +21,7 @@ worker.removableBuildIdDurationSinceDefault:
 system.enableNexus:
   - value: true
 component.nexusoperations.callback.endpoint.template:
-  - value: http://localhost:7243/api/v1/namespaces/{{.NamespaceName}}/nexus/callback
+  - value: http://localhost:7243/namespaces/{{.NamespaceName}}/nexus/callback
 component.callbacks.allowedAddresses:
   - value:
       - Pattern: "localhost:7243"
