--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,23 @@
 buildscript {
     ext {
         palantirGitVersionVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11) ? '0.15.0' : '0.13.0'}"
-        kotlinVersion = "${project.hasProperty("edgeDepsTest") ? '1.8.20' : (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16) ? '1.5.32' : '1.4.32')}"
     }
 }
 
 plugins {
-    id 'net.ltgt.errorprone' version '3.0.1' apply false
+    id 'net.ltgt.errorprone' version '4.0.1' apply false
     id 'org.cadixdev.licenser' version '0.6.1'
     id 'com.palantir.git-version' version "${palantirGitVersionVersion}" apply false
     id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
-    id 'com.diffplug.spotless' version '6.18.0' apply false
-    id 'com.github.nbaztec.coveralls-jacoco' version "1.2.15" apply false
+    id 'com.diffplug.spotless' version '6.25.0' apply false
+    id 'com.github.nbaztec.coveralls-jacoco' version "1.2.20" apply false
 
     //    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
     //    id 'org.jetbrains.kotlin.jvm' version '1.5.32'
     //    id 'org.jetbrains.kotlin.jvm' version '1.6.21'
     //    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
     //    id 'org.jetbrains.kotlin.jvm' version '1.8.20'
-    id 'org.jetbrains.kotlin.jvm' version "${kotlinVersion}" apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.20' apply false
     id 'base'
 }
 
@@ -62,7 +61,7 @@ ext {
     // test scoped
     // we don't upgrade to 1.3 and 1.4 because they require slf4j 2.x
     logbackVersion = project.hasProperty("edgeDepsTest") ? '1.3.5' : '1.2.11'
-    mockitoVersion = '5.2.0'
+    mockitoVersion = '5.14.2'
     junitVersion = '4.13.2'
 }
 
