--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -5,9 +5,9 @@ subprojects {
     apply plugin: 'java-library'
 
     java {
-        // graal only supports java 8, 11, 16, 17
-        sourceCompatibility = project.hasProperty("edgeDepsTest") ? JavaVersion.VERSION_17 : JavaVersion.VERSION_1_8
-        targetCompatibility = project.hasProperty("edgeDepsTest") ? JavaVersion.VERSION_17 : JavaVersion.VERSION_1_8
+        // graal only supports java 8, 11, 16, 17, 21, 23
+        sourceCompatibility = project.hasProperty("edgeDepsTest") ? JavaVersion.VERSION_21 : JavaVersion.VERSION_1_8
+        targetCompatibility = project.hasProperty("edgeDepsTest") ? JavaVersion.VERSION_21 : JavaVersion.VERSION_1_8
         withJavadocJar()
         withSourcesJar()
     }
