--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -7,3 +7,4 @@ jobs:
     with:
       java-repo-path: ${{github.event.pull_request.head.repo.full_name}}
       version: ${{github.event.pull_request.head.ref}}
+      version-is-repo-ref: true
