--- a/temporal-shaded/build.gradle
+++ b/temporal-shaded/build.gradle
@@ -79,4 +79,13 @@ shadowJar {
     archiveClassifier.set("")
 }
 
+jar {
+    manifest {
+        // The Java SDK uses a multi-release jar to support virtual threads. We need to manually set this since the
+        // shadowJar plugin doesn't do this https://github.com/GradleUp/shadow/issues/449.
+        attributes('Multi-Release': 'true')
+    }
+}
+
+
 shadowJar.shouldRunAfter(jar)
